# scagg

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  docker.yml  publish.yml
R/scagg/: DESCRIPTION  NAMESPACE
R/scagg/R/: metacells.R
R/scagg/inst/: LICENSE
src/scagg/: __init__.py  _aggregate.py  _cli.py  _metacells.py
tests/: conftest.py  test_metacells.py  test_pseudobulk.py
