[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scagg"
version = "0.1.0"
description = "Pseudobulk and metacell aggregation for single-cell RNA-seq (AnnData / scanpy)"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Ethan Fenton", email = "ethanfenton27@gmail.com" },
]
keywords = [
    "bioinformatics", "single-cell", "RNA-seq", "pseudobulk",
    "metacells", "scanpy", "anndata", "seurat",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "anndata>=0.9",
    "numpy>=1.23",
    "pandas>=1.5",
    "scipy>=1.9",
]

[project.optional-dependencies]
dev = ["pytest>=7", "scanpy"]

[project.urls]
Homepage     = "https://github.com/ethanfenton/scagg"
Repository   = "https://github.com/ethanfenton/scagg"
"Bug Tracker" = "https://github.com/ethanfenton/scagg/issues"

[project.scripts]
scagg = "scagg._cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v"

[tool.ruff]
line-length = 100
target-version = "py310"
